<resources>
    <string name="app_name">Markakod Portal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-mail</string>
    <string name="Home">Anasayfa</string>
    <string name="Profile">Profil</string>
    <string name="Sifre">Şifre</string>
    <string name="btn_register">Kayıt ol</string>
    <string name="btn_login">Giriş yap</string>
    <string name="markakod">Marka Kod</string>
    <string name="about_us">Hakkımızda</string>
    <string name="settings">Ayarlar</string>
    <string name="paylas">Paylaş</string>
    <string name="chat">Akış</string>
    <string name="kullanıcı_adi">Kullanıcı adı</string>
    <string name="calisanlar">Çalışanlar</string>
    <string name="sirket_iletisim">Şirket İletişim</string>
    <string name="cikis_yap">Çıkış Yap</string>
    <string name="yorum">Yorum yap</string>
    <string name="iletisim">İletişim :</string>
    <string name="telefon_num">0 216 359 33 05</string>
    <string name="eposta">E-mail :</string>
    <string name="mailadres">info@markakod.com</string>
    <string name="adres">Adres :</string>
    <string name="acikadres">19 MAYIS MAH. ATATÜRK CD. ULYA ENGİN İŞ MERKEZİ NO:68/9 KADIKÖY/İSTANBUL</string>
    <string name="alert_message">Çıkış yapmak istediğinizden emin misiniz?</string>
    <string name="positive_button">Evet</string>
    <string name="negative_button">Hayır</string>
    <string name="alert_title">Çıkış yap</string>
</resources>