<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/Home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/socialChat"
        android:icon="@drawable/chatt"
        android:title="@string/chat"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/placeholder"
        android:enabled="false"
        android:title=""
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/profile"
        android:icon="@drawable/person"
        android:title="@string/Profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/aboutus"
        android:icon="@drawable/info"
        android:title="@string/about_us"
        app:showAsAction="ifRoom" />
</menu>